adjust container width

--- a/style.css
+++ b/style.css
@@ -24,9 +24,10 @@ body *{
 
 #container{
     /*border: 0.1px solid white;*/
-    width: 360px;
+    width: 100%;
     margin: 56px auto 0px;
     padding: 0 24px;
+    max-width: 588px;
 
 }
 
