--- a/style.css
+++ b/style.css
@@ -68,12 +68,12 @@ body *{
     z-index: 1;
     top: 50%;
     transform: translateY(-50%);
-    left: 0;
+    animation: slide-back 0.2s;
+    cursor: pointer;
 }
 
 .light #switch button{
-    right: 0;
-    left: initial;
+    animation: slide-in 0.4s forwards;
 }
 
 #switch span{
@@ -89,6 +89,11 @@ body *{
 .light #switch span{
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
+
+#switch button:hover {
+    outline: 8px solid var(--highligh-color);
+}
+
 
 /* links */
 
@@ -177,5 +182,24 @@ footer{
     }
     .light {
         --bg-url: url(./assets/bg-desktop-light.jpg);
+    }
+}
+
+/* animation */
+@keyframes slide-in {
+    from {
+        left: 0;
+    }
+    to {
+        left: 50%;
+    }
+}
+
+@keyframes slide-back {
+    from {
+        left: 50%;
+    }
+    to {
+        left: 0;
     }
 }
